Fix serval bugs

--- a/DLPhotoPickerDemo/DLPhotoPickerDemo/Base.lproj/Main.storyboard
+++ b/DLPhotoPickerDemo/DLPhotoPickerDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IGy-ze-CRR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mwn-Bg-gF5">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -14,11 +14,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LPR-9o-mXs">
-                                <rect key="frame" x="228" y="198" width="143" height="30"/>
+                                <rect key="frame" x="88" y="154" width="143" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="143" id="Iqv-Tg-Dh4"/>
                                     <constraint firstAttribute="height" constant="30" id="UIb-x2-bL5"/>
@@ -30,7 +30,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H54-j1-7KL">
-                                <rect key="frame" x="228" y="247" width="143" height="30"/>
+                                <rect key="frame" x="88" y="203" width="143" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8BG-Wr-cMZ"/>
                                     <constraint firstAttribute="width" constant="143" id="hu0-hn-9Ph"/>
@@ -50,29 +50,56 @@
                             <constraint firstItem="LPR-9o-mXs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="134" id="S1e-W8-eaG"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="Home" id="0PJ-8s-src"/>
                     <navigationItem key="navigationItem" title="Select Function" id="Y0s-Jb-iez"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1034" y="339"/>
+            <point key="canvasLocation" x="-94" y="152"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5D4-RD-LV8">
+        <!--Tab Bar Controller-->
+        <scene sceneID="W2H-50-nBO">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IGy-ze-CRR" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Ek-bL-4l2">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <tabBarController id="mwn-Bg-gF5" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="cdL-bK-K4R">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="YWK-gi-1JV"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Hix-9x-Wxk"/>
+                        <segue destination="NGu-lE-Cuw" kind="relationship" relationship="viewControllers" id="Ym1-iP-Oes"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Vf3-mJ-oiB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AMZ-8p-u2X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="222" y="339"/>
+            <point key="canvasLocation" x="-563" y="386"/>
+        </scene>
+        <!--Photo Display-->
+        <scene sceneID="5K4-CZ-x8p">
+            <objects>
+                <viewController id="NGu-lE-Cuw" customClass="PhotoViewControllerTwo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="js8-3Q-1RP"/>
+                        <viewControllerLayoutGuide type="bottom" id="Odk-3d-UT1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pJP-7p-yLu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Photo Display" image="PhotoDisplay" id="KIv-Pr-squ"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zXD-AQ-zhu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-94" y="777"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Home" width="50" height="38"/>
+        <image name="PhotoDisplay" width="48" height="54"/>
+    </resources>
 </document>
